# ResearchAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  start_backend.bat  start_frontend.bat
backend/: __init__.py  main.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  chat.py  citations.py  compare.py  gaps.py  papers.py  reports.py  review.py  search.py  summarize.py  timeline.py  trends.py
backend/core/: __init__.py  exceptions.py  logger.py  models.py  watsonx_client.py
backend/db/: __init__.py  database.py
backend/modules/: __init__.py
backend/modules/chat/: __init__.py  research_chat.py
backend/modules/citation/: __init__.py  citation_manager.py
backend/modules/comparison/: __init__.py  comparator.py
backend/modules/gap_analysis/: __init__.py  gap_analyzer.py
backend/modules/knowledge_base/: __init__.py  knowledge_base.py  vector_store.py
backend/modules/literature_review/: __init__.py  review_generator.py
backend/modules/processing/: __init__.py  (+1 more)
config/: settings.py
data/: researchai.db
docs/: API.md  ARCHITECTURE.md  INSTALLATION.md
frontend/: app.py
frontend/pages/: 10_Trends.py  11_Settings.py  1_Search.py  2_Papers.py  3_Chat.py  4_Compare.py  5_Literature_Review.py  6_Gap_Analysis.py  7_Citations.py  8_Reports.py  9_Timeline.py
tests/: conftest.py  test_api_routes.py  test_citation_manager.py  test_database.py  test_models.py  test_query_analyzer.py  test_search_engine.py  test_watsonx_client.py
(+18 files in other folders)
